Support different textures (kinda)

--- a/pydanmaku/Makefile
+++ b/pydanmaku/Makefile
@@ -3,11 +3,11 @@ CC = g++
 CC_FLAGS = -std=c++11 -shared -fPIC -I/usr/include/python3.7m \
 	-Wall -Wextra -Wno-unused-parameter -O2 -g \
 	-lGL -lGLU -lGLEW -lglfw -lfreeimage \
-#	-static-libasan -fsanitize=address,undefined
+	-lasan -fsanitize=address,undefined
 
 # File names
 SOURCES = src/danmaku.cpp src/bullet.cpp src/renderer.cpp src/common/shader.cpp src/common/png.cpp src/common/trig.cpp
-OBJECTS = pydanmaku.so
+OBJECTS = _pydanmaku.so
 
 # Main target
 all: $(OBJECTS)
