Support for multiple groups

--- a/pydanmaku/Makefile
+++ b/pydanmaku/Makefile
@@ -6,7 +6,8 @@ CC_FLAGS = -std=c++11 -shared -fPIC -I/usr/include/python3.7m \
 	-lasan -fsanitize=address,undefined
 
 # File names
-SOURCES = src/danmaku.cpp src/bullet.cpp src/renderer.cpp src/common/shader.cpp src/common/png.cpp src/common/trig.cpp
+SOURCES = src/danmaku.cpp src/bullet.cpp src/renderer.cpp src/group.cpp \
+    src/common/shader.cpp src/common/png.cpp src/common/trig.cpp
 OBJECTS = _pydanmaku.so
 
 # Main target
