--- a/pydanmaku/Makefile
+++ b/pydanmaku/Makefile
@@ -1,21 +1,33 @@
 # Declaration of variables
 CC = g++
-CC_FLAGS = -std=c++11 -shared -fPIC -I/usr/include/python3.7m \
+CC_FLAGS = -std=c++11 -fPIC -I/usr/include/python3.7m \
 	-Wall -Wextra -Wno-unused-parameter -O2 -g \
 	-lGL -lGLU -lGLEW -lglfw -lfreeimage \
 	-lasan -fsanitize=address,undefined
 
+ODIR = obj
+
 # File names
-SOURCES = src/danmaku.cpp src/bullet.cpp src/renderer.cpp src/group.cpp \
-    src/common/shader.cpp src/common/png.cpp src/common/trig.cpp
+_OBJ = src/danmaku.o src/bullet.o src/renderer.o src/group.o \
+	src/common/shader.o src/common/png.o src/common/trig.o
+
+OBJ = $(patsubst %,$(ODIR)/%,$(_OBJ:src/%=%))
+
 OBJECTS = _pydanmaku.so
 
+obj/%.o: src/%.cpp $(DEPS)
+	$(CC) -c -o $@ $< $(CC_FLAGS)
+
 # Main target
-all: $(OBJECTS)
+all: $(OBJ)
+	$(CC) -o _pydanmaku.so $^ -shared $(CC_FLAGS)
+
 
 # Object files
 %.so: $(SOURCES)
 	$(CC) $(CC_FLAGS) $(SOURCES) -o $@
+
+
 
 
 
